--- a/style.css
+++ b/style.css
@@ -1,10 +1,128 @@
 /**
-* Author: Ashuwp!!!
-* Author url: http://www.ashuwp.com
-* Version: 5.0
+* Author: Alaric
+* Author url: http://www.kickmyass.com
+* Version: 1.0
 **/
 
+html{-webkit-text-size-adjust:none}
+.clear{clear:both}
+.clearfix:after{clear:both}
+.clearfix:before,.clearfix:after{content:" ";display:table}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,img,abbr,acronym,address,big,cite,code,del,dfn,em,font,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,hgroup,menu,nav,summary,time,mark,audio,video,header,footer{margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;background:transparent}
+body{font-size:14px}
+body{cursor:default;width:100%;height:auto;font-family:"Open Sans","Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei",Arial,Verdana,Tahoma,sans-serif;background:#f5f6f9;color:#555;line-height:1.5;margin:0}
+h1,h2,h3,h4,h5,h6{color:#273746;font-weight:normal}
+h1,h2{font-size:18px}
+h3,h4,h5,h6{font-size:15px}
+h4,.h4,h5,.h5,h6,.h6{margin-top:10px;margin-bottom:10px}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+
+
+
+
+
 /** 分页样式**/  
-.page_navi{width:100%;height:36px;line-height:36px;text-align:center;overflow:hidden;padding-top:1em;}  
-.page_navi a{padding:3px 8px;margin:2px;text-decoration:none;color:#888;border:1px solid #ccf;}  
-.page_navi a:hover,.page_navi a.current{border:1px solid #356aa0;color:#356aa0;font-weight:bolder;}  
+
+	/** 等于或大于550px正常模式 **/
+@media screen and (min-width: 550px) {
+    .pagination {
+        float: right;
+    }
+    .pagination a, .pagination a:visited {
+        float: left;
+        background: #fff;
+        margin: 0 5px 10px 0;
+        padding: 8px 11px;
+        line-height: 100%;
+        border: 1px solid #ebebeb;
+        border-radius: 2px;
+    }
+    .pagination .current, .pagination .dots {
+        background: #fff;
+        float: left;
+        margin: 0 5px 0 0;
+        padding: 8px 11px;
+        line-height: 100%;
+        border: 1px solid #ebebeb;
+        border-radius: 2px;
+    }
+    .pagination span.pages {}
+    .pagination span.current, .pagination a:hover {
+        background: #0088cc;
+        color: #fff;
+        border: 1px solid #0088cc;
+    }
+    .screen-reader-text, .pages  {
+        display: none;
+    }
+}
+/** 等于或小于550px用于移动设备 **/
+@media screen and (max-width: 550px) {
+    .pagination {
+        background: #fff;
+        border: 1px solid #ebebeb;
+        border-radius: 2px;
+    }
+    .pagination .nav-links {
+        min-height: 30px;
+        position: relative;
+        text-align: center;
+    }
+    .pagination .current .screen-reader-text {
+        position: static !important;
+    }
+    .screen-reader-text {
+        height: 1px;
+        overflow: hidden;
+        position: absolute !important;
+    }
+    .page-numbers {
+        display: none;
+        line-height: 25px;
+        padding: 5px;
+    }
+    .pagination .page-numbers.current {
+        text-transform: uppercase;
+    }
+    .pagination .current {
+        display: inline-block;
+    }
+    .pagination .prev,
+    .pagination .next {
+        background: #0088cc;
+        color: #fff;
+        display: inline-block;
+        height: 29px;
+        line-height: 29px;
+        overflow: hidden;
+        padding: 2px 8px;
+        position: absolute;
+        border: 1px solid #0088cc;
+    }
+    .pagination .next {
+        border-radius: 0 2px 2px 0
+    }
+    .pagination .prev {
+        border-radius: 2px 0 0 2px;
+    }
+    .pagination .prev a,
+    .pagination .next a{
+        color: #fff;
+        line-height: 20px;
+        padding: 0;
+        display: inline-block;
+    }
+    .pagination .prev {
+        left: 0;
+    }
+    .pagination .prev:before {
+        left: -1px;
+    }
+    .pagination .next {
+        right: 0;
+    }
+    .pagination .next:before {
+        right: -1px;
+    }
+}
+
